development/sf_project/force-app/main/default/objects/HealthcareProvider/fields/Current_Patient_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient_Load__c</fullName>
    <label>Current Patient Load</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Current number of active patients assigned to this provider. Updated periodically, not real-time.</description>
    <inlineHelpText>Number of active patients currently assigned to this provider</inlineHelpText>
</CustomField>