development/sf_project/force-app/main/default/objects/HealthcareProvider/fields/Is_Accepting_Patients__c.field-meta.xml
<CustomField>
    <fullName>Is_Accepting_Patients__c</fullName>
    <label>Accepting Patients</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the provider is currently accepting new patient referrals</description>
    <inlineHelpText>Check if this provider is accepting new patients</inlineHelpText>
</CustomField>