development/sf_project/force-app/main/default/objects/HealthcareProvider/fields/MCR_Number__c.field-meta.xml
<CustomField>
    <fullName>MCR_Number__c</fullName>
    <label>MCR Number</label>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Singapore Medical Council Registration number for licensed healthcare practitioners</description>
    <inlineHelpText>Enter the provider MCR number (e.g., M12345A)</inlineHelpText>
</CustomField>