development/sf_project/force-app/main/default/objects/HealthcareProvider/fields/Next_Available_Slot__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Slot__c</fullName>
    <label>Next Available Slot</label>
    <type>DateTime</type>
    <description>Next available appointment slot for new patient bookings. Manually maintained or updated via integration.</description>
    <inlineHelpText>Date and time of the next available appointment</inlineHelpText>
</CustomField>